--- a/2/4-4_Image.html
+++ b/2/4-4_Image.html
@@ -8,7 +8,7 @@
 		<p id="output1">こんにちは</p>
 		<script>
 			const output1 = document.getElementById("output1");
-			output1.innerHTML = "<img scr = 'fruit.png' alt='果物'>";
+			output1.innerHTML = "<img src = '/Users/pontagudetama/Desktop/web_application/2/fruit.png' alt='果物'>";
 			
 			/*
 			好きな画像を当てはめてみよう！
@@ -17,3 +17,8 @@
 		</script>
 	</body>
 </html>
+
+<!-- 画像がうまく表示されない。2024/11/11
+ 解決方法：画像を右クリック->パスを取得->リロード
+ 階層が違うとできない。出力されない。同じ階層におきたいが、困っている。
+ に通い方法があるはず。頑張ろう！ -->
