--- a/6/7_test.html
+++ b/6/7_test.html
@@ -3,66 +3,57 @@
 	<head>
 		<meta charset="utf-8">
 		<title>1_計算機</title>
-		<!-- 値を入力する枠（入力のはこ）を作る工程 -->
-		<!-- 幅：200px,余白：3px,文字の大きさ：30px,枠を直線で囲む（赤色）1pxの線の太さ,テキストの位置は左寄せ -->
+	
+
 
 		<style>
+		
 			input {
-				width: 200px;
-				padding: 3px;
+				width: 300px;
+				padding: 20px;
 				font-size: 30px;
-				border: 1px solid rgb(215, 12, 12); /*枠線は直線で囲む */
+				border: 1px solid red;
 				text-align: center;
 			}
-		
-		.inline-block_test{
-			display: inline-block;
-			padding: 20px;
-			height: 10px;
-			border: 1px solid rgb(215, 12, 12); 
-		}
-
+			
 /* 足し算ボタンの大きさ 余白30px,文字大きさ30px */
 			button {
-				padding: 30px;
+				padding: 10px;
 				font-size: 30px;
 			}
 
 /* 結果ボタンの設定 */
 			#output {
-				width: 200px;
+				width: 400px;
 				padding: 3px;
 				font-size: 30px;
 				border: 1px solid gray;
-				text-align: left;
-			}
-			.family2{
-				font-family: 'Arial';
+				text-align: center;
+
 			}
 		</style>
 		
 	</head>
 	<body>
 		<h1>私のオリジナル計算機</h1>
-		<p><font size="6" color="#ff0000" face = "MS 明朝"><h1>私のオリジナル計算機</h1></font></p>
 		
-		<!-- 入力aと入力bの入れ物 -->
-		<p>a:<input type="text" id="input1" placeholder="1,2,3"></p> 
-		<p>b:<input type="text" id="input2" placeholder="1,2,3"></p>
-
-		<!-- 足し算ボタン -->
-		<p><button onclick="plus();">足し算</button></p>
-		<!-- 引き算ボタン -->
-		<p><button onclick="minus();">引き算</button></p>
-		<!-- 掛け算ボタン -->
-		<p><button onclick="multiply();">掛け算</button></p>
-		<!-- 割り算ボタン -->
-		<p><button onclick="divide();">割り算</button></p>
-
+		<div>
+				<p><input type="text" id="input1" placeholder="1,2,3"></p>
+				<p><input type="text" id="input2" placeholder="1,2,3"></p>
+		</div>
 		
+		<div>	
+			<button onclick="plus();">足し算</button>
+			<button onclick="minus();">引き算</button>
+			<button onclick="multiply();">掛け算</button>
+			<button onclick="divide();">割り算</button>
+		</div>
 	
 		<!-- 結果ボタン -->
-		<p id="output">結果</p>
+		<div>
+			<p id="output">結果</p>
+		</div>
+		
 
 		<script>
 			const input1 = document.getElementById("input1");
