--- a/6/8_test.html
+++ b/6/8_test.html
@@ -39,15 +39,23 @@
 			.family2{
 				font-family: 'Arial';
 			}
+
+			h1{
+			font-size:60px;
+			font-family:'Pacifico'
+		}
 		</style>
 		
 	</head>
 	<body>
-		<!-- <h1>私のオリジナル計算機</h1> -->
+		<h1>Dentaku</h1>
 		<p><font size="6" color="#ff0000" face = "ヒラギノ角ゴシック"><h1>私のオリジナル計算機</h1></font></p>
-		<p><font size="6" color="#ff0000" face = "alba"><h1>私のオリジナル計算機</h1></font></p>
+		<p><font size="6" color="#ff0000" face = "Pacifico"><h1>私のオリジナル計算機</h1></font></p>
 		<p><font size="6" color="#ff0000" face = "script"><h1>私のオリジナル計算機</h1></font></p>
 		<p><font size="6" color="#ff0000" face = "ヒラギノ角ゴシック"><h1>私のオリジナル計算機</h1></font></p>
+
+		
+	
 		<!-- 入力aと入力bの入れ物 -->
 		<p>a:<input type="text" id="input1" placeholder="1,2,3"></p> 
 		<p>b:<input type="text" id="input2" placeholder="1,2,3"></p>
