--- a/2201110034-report06 2/index.html
+++ b/2201110034-report06 2/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>1_è¨ˆç®—æ©Ÿ</title>
-<!-- ã‚¹ã‚¿ã‚¤ãƒ«ã‚’æ±ºã‚ã‚‹å ´æ‰€ -->
+		<title>1_ŒvZ‹@</title>
+<!-- ƒXƒ^ƒCƒ‹‚ğŒˆ‚ß‚éêŠ -->
 		<style>
 		
 			input {
@@ -14,13 +14,13 @@
 				text-align: center;
 			}
 			
-/* è¶³ã—ç®—ãƒœã‚¿ãƒ³ã®å¤§ãã• ä½™ç™½30px,æ–‡å­—å¤§ãã•30px */
+/* ‘«‚µZƒ{ƒ^ƒ“‚Ì‘å‚«‚³ —]”’30px,•¶š‘å‚«‚³30px */
 			button {
 				padding: 10px;
 				font-size: 30px;
 			}
 
-/* çµæœãƒœã‚¿ãƒ³ã®è¨­å®š */
+/* Œ‹‰Êƒ{ƒ^ƒ“‚Ìİ’è */
 			#output {
 				width: 400px;
 				padding: 3px;
@@ -29,7 +29,7 @@
 				text-align: center;
 
 			}
-/*<h1>ã¨<h2>ã®æ–‡å­—ã®è¨­å®š*/
+/*<h1>‚Æ<h2>‚Ì•¶š‚Ìİ’è*/
 			h1{
 			font-size:60px;
 			font-family:'Sacramento', cursive;
@@ -48,26 +48,26 @@
 	</head>
 	<body>
 		<h1>My Original Calculator</h1>
-		<h2>â†“â†“èµ¤è‰²ã®æ ã«æ•°å­—ã‚’å…¥ã‚Œã¦ã€å››å‰‡æ¼”ç®—ã®ãƒœã‚¿ãƒ³ã‚’æŠ¼ã—ã¦ã­ï¼</h2>
-		<h3> **a ã‹ã‚‰ b ã‚’è¶³ã—ãŸã‚Šå¼•ã„ãŸã‚Šã—ã¾ã™....<br>
-			çµæœã¨æ›¸ã„ã¦ã‚ã‚‹éƒ¨åˆ†ã«å‡ºåŠ›ã•ã‚Œã‚‹ã‚ˆï¼**
+		<h2>««ÔF‚Ì˜g‚É”š‚ğ“ü‚ê‚ÄAl‘¥‰‰Z‚Ìƒ{ƒ^ƒ“‚ğ‰Ÿ‚µ‚Ä‚ËI</h2>
+		<h3> **a ‚©‚ç b ‚ğ‘«‚µ‚½‚èˆø‚¢‚½‚è‚µ‚Ü‚·....<br>
+			Œ‹‰Ê‚Æ‘‚¢‚Ä‚ ‚é•”•ª‚Éo—Í‚³‚ê‚é‚æI**
 		</h3>
-	<!-- å…¥åŠ›aã¨å…¥åŠ›bã®å…¥ã‚Œç‰© -->
+	<!-- “ü—Ía‚Æ“ü—Íb‚Ì“ü‚ê•¨ -->
 	<p>a : <input type="text" id="input1" placeholder="1,2,3"></p> 
 	<p>b : <input type="text" id="input2" placeholder="1,2,3"></p>
 
 		
-	<!-- å››å‰‡æ¼”ç®—ã®ãƒœã‚¿ãƒ³ã€€å„ç¨® -->
+	<!-- l‘¥‰‰Z‚Ìƒ{ƒ^ƒ“@Šeí -->
 		<div>	
-			<button onclick="plus();">è¶³ã—ç®—</button>
-			<button onclick="minus();">å¼•ãç®—</button>
-			<button onclick="multiply();">æ›ã‘ç®—</button>
-			<button onclick="divide();">å‰²ã‚Šç®—</button>
+			<button onclick="plus();">‘«‚µZ</button>
+			<button onclick="minus();">ˆø‚«Z</button>
+			<button onclick="multiply();">Š|‚¯Z</button>
+			<button onclick="divide();">Š„‚èZ</button>
 		</div>
 	
-		<!-- çµæœãƒœã‚¿ãƒ³ -->
+		<!-- Œ‹‰Êƒ{ƒ^ƒ“ -->
 		<div>
-			<p id="output">çµæœ</p>
+			<p id="output">Œ‹‰Ê</p>
 		</div>
 		
 
@@ -75,31 +75,31 @@
 			const input1 = document.getElementById("input1");
 			const input2 = document.getElementById("input2");
 			const output = document.getElementById("output");
-// è¶³ã—ç®—
+// ‘«‚µZ
 			function plus() {
 				let total1 = Number(input1.value) + Number(input2.value);
 				output.innerHTML = total1;
 			}
-// å¼•ãç®—
+// ˆø‚«Z
 			function minus() {
 				let total1 = Number(input1.value) - Number(input2.value);
 				output.innerHTML = total1;
 			}
-// æ›ã‘ç®—
+// Š|‚¯Z
 			function multiply() {
 				let total1 = Number(input1.value) * Number(input2.value);
 				output.innerHTML = total1;
 			}
-// å‰²ã‚Šç®—
+// Š„‚èZ
 			function divide() {
 				let total1 = Number(input1.value) / Number(input2.value);
 				output.innerHTML = total1;
 			}
 		</script>
 		
-		<h3>ç§ã®ã‚ªãƒªã‚¸ãƒŠãƒ«ãªéƒ¨åˆ†ã¯ã€ãƒ•ã‚©ãƒ³ãƒˆã«ã“ã ã‚ã£ãŸéƒ¨åˆ†ã§ã™ã€‚<br>
-			å„ªã—ã„è¨ˆç®—æ©Ÿã‚’ã‚¤ãƒ¡ãƒ¼ã‚¸ã—ã¦ã„ã¾ã™ã€‚ãƒœã‚¿ãƒ³ã¯æŠ¼ã—ã‚„ã™ãå¤§ãã‚ã«ã—ã¾ã—ãŸã€‚<br>
-			æ–‡å­—ã®å¤§ãã•ã‚„è‰²ã«ã‚‚å¯æ„›ã‚‰ã—ã•ã‚’è¡¨ã—ã¦ã„ã¾ã™ï¼
+		<h3>„‚ÌƒIƒŠƒWƒiƒ‹‚È•”•ª‚ÍAƒtƒHƒ“ƒg‚É‚±‚¾‚í‚Á‚½•”•ª‚Å‚·B<br>
+			—D‚µ‚¢ŒvZ‹@‚ğƒCƒ[ƒW‚µ‚Ä‚¢‚Ü‚·Bƒ{ƒ^ƒ“‚Í‰Ÿ‚µ‚â‚·‚­‘å‚«‚ß‚É‚µ‚Ü‚µ‚½B<br>
+			•¶š‚Ì‘å‚«‚³‚âF‚É‚à‰Âˆ¤‚ç‚µ‚³‚ğ•\‚µ‚Ä‚¢‚Ü‚·I
 
 		</h3>
 	</body>
